# netbox-fs

./: CLAUDE.md  README.md  pyproject.toml
netbox_fs/: __init__.py  choices.py  filtersets.py  forms.py  models.py  navigation.py  tables.py  urls.py  views.py
netbox_fs/api/: serializers.py  urls.py  views.py
netbox_fs/migrations/: 0001_initial.py
netbox_fs/templates/netbox_fs/: disk.html  filesystem.html  partition.html
netbox_fs/tests/: test_api.py  test_filtersets.py  test_models.py
